--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <section class="mainentry">
             
             <span>
-                <img src="/Abdulrasheed_Bawa.jpg" alt="THe current Executive Chairman of Efcc">
+                <img src="./Abdulrasheed_Bawa.jpg" alt="THe current Executive Chairman of Efcc">
                 <br>
                 Abdulrasheed Bawa is the fourth Executive 
             </span>
@@ -51,7 +51,7 @@
         </section>
 
         <section class="LatestNews">
-            
+
         </section>
     </main>
 </body>
