changed the width

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <section class="mainentry">
             
             <span>
-                <img src="./Abdulrasheed_Bawa.jpg" alt="THe current Executive Chairman of Efcc">
+                <img src="./Abdulrasheed_Bawa.jpg" alt="THe current Executive Chairman of Efcc" width="500px" >
                 <br>
                 Abdulrasheed Bawa is the fourth Executive 
             </span>
