--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
-    <title>Document</title>
+    <title>ECC</title>
 </head>
 
 <body>
@@ -51,7 +51,7 @@
         </section>
 
         <section class="LatestNews">
-
+            <h1>Latest News</h1>
         </section>
     </main>
 </body>
