Change the document title

--- a/index.html
+++ b/index.html
@@ -52,6 +52,76 @@
 
         <section class="LatestNews">
             <h1>Latest News</h1>
+            <span>
+                <small>News</small>
+                <br>
+                <img src="./efcclogo.png" alt="">
+                <strong>
+                    <a href="https://www.efcc.gov.ng/efcc/">
+                        #22 Million Contract Fraud Ex-Maritime academy Staffs bags 10 years in Prison
+                    </a>
+                </strong>
+            </span>
+            <span>
+                <small>News</small>
+                <br>
+                <img src="./efcclogo.png" alt="">
+                <strong>
+                    <a href="https://www.efcc.gov.ng/efcc/">
+                        #22 Million Contract Fraud Ex-Maritime academy Staffs bags 10 years in Prison
+                    </a>
+                </strong>
+            </span>
+            <span>
+                <small>News</small>
+                <br>
+                <img src="./efcclogo.png" alt="">
+                <strong>
+                    <a href="https://www.efcc.gov.ng/efcc/">
+                        #22 Million Contract Fraud Ex-Maritime academy Staffs bags 10 years in Prison
+                    </a>
+                </strong>
+            </span>
+            <span>
+                <small>News</small>
+                <br>
+                <img src="./efcclogo.png" alt="">
+                <strong>
+                    <a href="https://www.efcc.gov.ng/efcc/">
+                        #22 Million Contract Fraud Ex-Maritime academy Staffs bags 10 years in Prison
+                    </a>
+                </strong>
+            </span>
+            <span>
+                <small>News</small>
+                <br>
+                <img src="./efcclogo.png" alt="">
+                <strong>
+                    <a href="https://www.efcc.gov.ng/efcc/">
+                        #22 Million Contract Fraud Ex-Maritime academy Staffs bags 10 years in Prison
+                    </a>
+                </strong>
+            </span>
+            <span>
+                <small>News</small>
+                <br>
+                <img src="./efcclogo.png" alt="">
+                <strong>
+                    <a href="https://www.efcc.gov.ng/efcc/">
+                        #22 Million Contract Fraud Ex-Maritime academy Staffs bags 10 years in Prison
+                    </a>
+                </strong>
+            </span>
+            <span>
+                <small>News</small>
+                <br>
+                <img src="./efcclogo.png" alt="">
+                <strong>
+                    <a href="https://www.efcc.gov.ng/efcc/">
+                        #22 Million Contract Fraud Ex-Maritime academy Staffs bags 10 years in Prison
+                    </a>
+                </strong>
+            </span>
         </section>
     </main>
 </body>
