--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>ECC</title>
 </head>
 
@@ -14,7 +15,7 @@
             <span id="logo">
                 <img src="./efcclogo.png" alt="efcc logo" srcset="">
             </span>
-            <span>
+            <span id="header-nav" class="navs">
                 <a href="#" class="header-links">Home</a>
                 <a href="#About" class="header-links">About Us</a>
                 <a href="" class="header-links">News & Information</a>
@@ -24,19 +25,19 @@
             </span>
         </nav>
     </header>
-
+<!--  jhwyegrq wveqwgw e -->
     <main>
-        <section class="mainentry">
-            
-            <span>
+        <section id="intro">
+            <div id="introduction">
                 <img src="./Abdulrasheed_Bawa.jpg" alt="THe current Executive Chairman of Efcc" width="500px" >
                 <br> 
                 Abdulrasheed Bawa is the fourth Executive 
-            </span>
-            <span>
+            </div>
+            <div id="mission">
                 <span>
                     <h1>MISSION</h1>
-                    To eradicate economic and financial crimes through prevention, enforcement and cordination.
+                    To eradicate economic and financial crimes through prevention,
+                     enforcement and cordination.
                 </span>
                 <span>
                     <h1>VISION</h1>
@@ -47,7 +48,7 @@
                     Professionalism and courage
                 </span>
 
-            </span>
+            </div>
         </section>
 
         <section class="LatestNews">
